--- a/css/formpage.css
+++ b/css/formpage.css
@@ -27,7 +27,8 @@ h3
     padding: -10;
     background-size: cover;
     border: 3px solid rgba(255,255,255,0.6);
-    margin-left: 45%;
+    position: absolute;
+    left: 46%;
     margin-top: -770px;
   }
 body{
