--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   }
+  
   .poistion
   {
     position: fixed;
@@ -31,7 +32,7 @@ body{
     display: inline;
     margin-top: 10px;
     margin-bottom: 200px;
-    padding: 50;
+    padding: 80;
 
     background-color: #ffffff;
     background-size: cover;
@@ -52,8 +53,9 @@ body{
     background-color: #48d0ec;
    width: 80;
    height: 40;
-   margin-right: 20;
-   margin-bottom: 20;
+   position: absolute;
+   left: 620;
+   top: 50;
   }
   #feedscards{
     margin-left: 10;
@@ -63,12 +65,10 @@ body{
   }
   .chats
   {
-    background-color: rgba(0,0,0,0.6);
-    background-size: cover;
 
   }
-  #icon{
-    margin-right: 135;
+    #icon{
+    margin-right: 115;
     transition: transform 0.5s linear;
   }
   #icon:hover
@@ -87,14 +87,15 @@ body{
   }
   #chatheader
   { padding-top: 10;
-  height: 40;
+	  margin-left: 0;
+  height: 50;
   color: #ffffff;
-  background-color:rgba(255,255,255,0.19);
+  background-color:#d2d2d2d2;
   background-size: cover;
 }
-  h2{
+  h4{
     font-family: sans-serif;
-   font-size: 24;
+
    text-align: left;
 
    margin-left: 20;
@@ -103,12 +104,26 @@ body{
 .avtar
 {
   border-radius: 50%;
+  background-color: white;
 }
 .align{
-margin-top: -50;
+margin-top: -40;
 margin-left: 40;
 margin-right: 20;
 
+}
+#back{
+  background-image: linear-gradient(rgba(255,255,255,0.0),rgba(255,255,255,0.2));
+  height: 60;
+  background-size: cover;
+}
+#textprofile{
+  margin-top: -54;
+  margin-left: 65;
+}
+#profile{
+  background-color: #ffffff;
+  border: 2px solid #ffffff;
 }
 .scroll {
   height: 800px;
@@ -121,21 +136,87 @@ margin-right: 20;
 }
 .menubutton
 {
-  margin: 10px;
-  color: #48D0EC;
-border-radius: 5px;
-width: 120px;
-height: 40px;
+
+  color: #bdbdbd;
+border-radius: 0px;
+width: 330px;
+height: 60px;
+margin-top: 5;
+margin-left: -20;
 background-color: #ffffff;
-border: 2px solid #edededed;
+border: 0px ;
 }
 .menubutton:hover
 {
   box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.10) , 2px 6px 29px 0 rgba(0, 0, 0, 0.14);
+}
+#notificationshow{
+  height: 105;
+  color:#edededed;
+}
+.popover-header {
+	background-color: white;
+	color: #bdbdbd;
+}
+.element {
+	position: absolute;
+	top: 70;
+	left: 30;
+  display: inline-flex;
+  align-items: center;
+}
+i.fa-camera {
+
+  cursor: pointer;
+  font-size: 30px;
+}
+i:hover {
+  opacity: 0.6;
+}
+#file {
+  display: none;
 }
 modal-backdrop {
 
 
 
  opacity:0.1;
+}
+.sbutton{
+	margin-left: 500px;
+    margin-top: -57px;
+	height: 35;
+	width: 140;
+	border: 2px solid #edededed;
+	color: gray;	
+	border-radius: 30px;
+}
+.profile{
+	margin-left: 15;
+	margin-bottom: -50;
+	margin-top: 14;
+	border-radius: 50%;
+	
+	
+}
+.listview{
+	border: 0.5px solid #edededed;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
+	margin-bottom: 7;
+	height: 100;
+	margin-left: 10;
+	margin-right: 60;
+	border-radius: 10px;
+	
+}
+.subtitle{
+	margin-top: -4px;
+    margin-left: 72px;
+    color: gray;
+}
+.name{
+	margin-left: 75;
+	color: black;
+	font-size: 25;
+	font-family: sans-serif;
 }
